Proposta de trabalho e cronograma

--- a/index.html
+++ b/index.html
@@ -40,15 +40,13 @@
         <div class="page-header">
           <h3>Proposta</h3>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin elementum sodales urna, a vehicula lorem posuere et. Morbi sodales nibh mattis vehicula gravida. Suspendisse convallis mauris varius, blandit neque eget, ullamcorper neque. Duis sodales feugiat lobortis. Proin at nibh augue. Etiam viverra ex ornare est sodales porta. Vestibulum pulvinar posuere ligula.</p>
+        <p>Polinômios são ferramentas matemáticas poderosas, mas que exigem poder computacional. Especialmente o produto de dois polinômios, se feito de maneira ingênua, pode ser extremamente custoso. A Transformada Rápida de Fourier (Fast Fourier Transform - FFT) é um algoritmo de divisão e conquista que apresenta uma solução eficiente para este problema.</p>
 
-        <p>Nulla ultricies vel diam sit amet tincidunt. Suspendisse arcu lorem, iaculis id facilisis et, sollicitudin cursus metus. Pellentesque tellus odio, condimentum quis lectus at, venenatis tincidunt odio. Vestibulum nec ex nibh. Sed eget augue tempor, pretium neque quis, aliquam magna. Morbi id eros nisi. Integer dignissim felis ex, ac porttitor magna mollis quis. Aliquam erat volutpat. Vestibulum in tellus sit amet eros maximus condimentum eu ac nisl. Proin porttitor sagittis enim quis consequat. Maecenas a sodales sem. Donec condimentum ac ex id eleifend.</p>
+        <p>Problemas que envolvem FFT têm se tornado comuns em competições de programação e aparecem de formas cada vez mais inusitadas. Por exemplo:</p>
 
-        <p>Quisque at nisi gravida, sollicitudin leo at, lacinia odio. Quisque non magna euismod, malesuada nisi eget, mollis est. Nulla eleifend, mauris eu pulvinar ullamcorper, lacus nulla blandit eros, a porttitor orci nulla at libero. Duis et lorem non urna condimentum facilisis sed ac lacus. Vivamus mauris sem, dapibus nec felis sed, ullamcorper tincidunt enim. Vestibulum rutrum diam eget massa eleifend, a blandit orci fermentum. Sed tempus gravida purus, vel congue neque egestas in. Vivamus tincidunt posuere elit. Etiam tortor turpis, mollis in maximus pellentesque, congue non neque. Mauris et elit vel neque tincidunt sodales. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent nec nulla dignissim, maximus dolor vel, auctor ligula. Phasellus consectetur consequat fermentum. Etiam fringilla nibh vitae vestibulum tempor. Aliquam suscipit auctor pulvinar.</p>
+        <p>A <a href="https://pt.wikipedia.org/wiki/Dist%C3%A2ncia_de_Hamming">distância de Hamming</a> entre duas strings de mesmo comprimento é o número de posições nas quais elas diferem entre si. Uma string é dita K-semelhante de outra string se e somente se elas são do mesmo comprimento e a distância de Hamming entre elas não é maior que K. Dadas strings A e B, quantas substrings distintas de A são K-semelhantes a B. <a href="https://icpcarchive.ecs.baylor.edu/index.php?option=com_onlinejudge&Itemid=8&page=show_problem&problem=2672">ICPC Hefei 2009 - K-neighbor substrings</a></p>
 
-        <p>Sed quis ornare lacus. Nulla at justo iaculis, rhoncus lorem eu, iaculis elit. Proin elementum consectetur libero ac volutpat. In hac habitasse platea dictumst. Integer facilisis, erat at mattis accumsan, lacus ligula suscipit eros, non tempus lectus est molestie nulla. Proin eget quam vitae ligula pulvinar hendrerit vestibulum non ligula. Vivamus fringilla massa finibus leo rhoncus, sit amet tincidunt sapien venenatis. Aenean porttitor est ante, imperdiet condimentum metus aliquam lacinia. Curabitur sapien tortor, venenatis eget elit a, fermentum imperdiet arcu. Suspendisse finibus risus id diam tempor tempus. Fusce elementum congue urna, eu auctor nunc iaculis nec. Duis ipsum leo, rutrum sed massa ut, dignissim sagittis lectus. Suspendisse lobortis finibus leo, vitae tincidunt sem bibendum eget. Sed ut varius elit. Sed fringilla nisi felis, quis tempor odio eleifend quis.</p>
-
-        <p>Nullam tincidunt hendrerit ullamcorper. Vestibulum felis nulla, lacinia eu sollicitudin sit amet, hendrerit eu tellus. Vivamus condimentum tincidunt metus at egestas. In quis massa nec ex gravida molestie. Phasellus ex velit, egestas eu lobortis ut, lobortis vel libero. Donec sem tellus, volutpat tincidunt interdum ut, tempus vel dui. Donec vitae pulvinar erat, eu posuere purus. Phasellus sit amet nisi pharetra, ultricies arcu eu, convallis nunc. Vestibulum iaculis posuere feugiat. Curabitur vel arcu ac mi eleifend faucibus. Vivamus eleifend, augue a eleifend viverra, tellus nulla posuere eros, id commodo tortor nisi non nisi.</p>
+        <p>Este trabalho tem como objetivo servir como material de estudo para estudantes que queiram aprender o algoritmo da Transformada Rápida de Fourier. Em especial, pretende ser uma fonte de preparação para o uso do FFT em competições da Maratona de Programação pelos competidores do MaratonIME.</p>
 
         <h3>Cronograma</h3>
 
@@ -68,26 +66,60 @@
           </thead>
           <tbody>
             <tr>
-              <th style="text-align:center" scope="row">Lorem ipsum</th>
-              <td style="text-align:center;"><span class="done">&#x2713;</span></td>
-              <td style="text-align:center;"><span class="done">&#x2713;</span></td>
-              <td style="text-align:center;"></td>
-              <td style="text-align:center;"></td>
+              <th style="text-align:center" scope="row">Estudo e análise do algoritmo</th>
+              <!--td style="text-align:center;"><span class="done">&#x2713;</span></td-->
+              <td style="text-align:center;">•</td>
+              <td style="text-align:center;">•</td>
+              <td style="text-align:center;">•</td>
+              <td style="text-align:center;">•</td>
               <td style="text-align:center;"></td>
               <td style="text-align:center;"></td>
               <td style="text-align:center;"></td>
               <td style="text-align:center;"></td>
             </tr>
             <tr>
-              <th style="text-align:center" scope="row">Dolor sit amet</th>
-              <td style="text-align:center;"></td>
-              <td style="text-align:center;"><span class="done">&#x2713;</span></td>
-              <td style="text-align:center;"><span class="done">&#x2713;</span></td>
+              <th style="text-align:center" scope="row">Implementação eficiente</th>
               <td style="text-align:center;"></td>
               <td style="text-align:center;"></td>
+              <td style="text-align:center;">•</td>
+              <td style="text-align:center;">•</td>
               <td style="text-align:center;"></td>
               <td style="text-align:center;"></td>
               <td style="text-align:center;"></td>
+              <td style="text-align:center;"></td>
+            </tr>
+            <tr>
+              <th style="text-align:center" scope="row">Implementação em corpo finito</th>
+              <td style="text-align:center;"></td>
+              <td style="text-align:center;"></td>
+              <td style="text-align:center;"></td>
+              <td style="text-align:center;">•</td>
+              <td style="text-align:center;">•</td>
+              <td style="text-align:center;"></td>
+              <td style="text-align:center;"></td>
+              <td style="text-align:center;"></td>
+            </tr>
+            <tr>
+              <th style="text-align:center" scope="row">Solução de problemas</th>
+              <td style="text-align:center;"></td>
+              <td style="text-align:center;"></td>
+              <td style="text-align:center;"></td>
+              <td style="text-align:center;">•</td>
+              <td style="text-align:center;">•</td>
+              <td style="text-align:center;">•</td>
+              <td style="text-align:center;"></td>
+              <td style="text-align:center;"></td>
+            </tr>
+            <tr>
+              <th style="text-align:center" scope="row">Monografia</th>
+              <td style="text-align:center;"></td>
+              <td style="text-align:center;"></td>
+              <td style="text-align:center;"></td>
+              <td style="text-align:center;"></td>
+              <td style="text-align:center;"></td>
+              <td style="text-align:center;">•</td>
+              <td style="text-align:center;">•</td>
+              <td style="text-align:center;">•</td>
             </tr>
           </tbody>
         </table>
