--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="#">Home</a>
             <a class="nav-link" href="monografia.pdf">Monografia</a>
-            <a class="nav-link" href="subjetiva.pdf">Parte subjetiva</a>
+            <a class="nav-link" href="subjetivo.pdf">Parte subjetiva</a>
             <a class="nav-link" href="#">Pôster</a>
             <a class="nav-link" href="fft.cc">Códigos</a>
           </nav>
